<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
    </ImageView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_letters"
        android:layout_width="300sp"
        android:layout_height="70sp"
        android:layout_marginTop="40sp"
        android:background="@drawable/my_button"
        android:bufferType="spannable"
        android:filterTouchesWhenObscured="false"
        android:includeFontPadding="false"
        android:outlineProvider="none"
        android:scrollbarStyle="insideInset"
        android:singleLine="false"
        android:soundEffectsEnabled="false"
        android:text="@string/letters_gm"
        android:textColor="#FAF9F9"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChoice"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playInMorse"
        android:layout_width="300sp"
        android:layout_height="70sp"
        android:layout_marginTop="40sp"
        android:background="@drawable/my_button"
        android:bufferType="spannable"
        android:filterTouchesWhenObscured="false"
        android:includeFontPadding="false"
        android:outlineProvider="none"
        android:scrollbarStyle="insideInset"
        android:singleLine="false"
        android:soundEffectsEnabled="false"
        android:text="@string/words_gm"
        android:textColor="#FAF9F9"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_letters"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playOutMorse"
        android:layout_width="300sp"
        android:layout_height="70sp"
        android:layout_marginTop="40sp"
        android:background="@drawable/my_button"
        android:bufferType="spannable"
        android:filterTouchesWhenObscured="false"
        android:includeFontPadding="false"
        android:outlineProvider="none"
        android:scrollbarStyle="insideInset"
        android:singleLine="false"
        android:soundEffectsEnabled="false"
        android:text="@string/morse_gm"
        android:textColor="#FAF9F9"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playInMorse"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_mix"
        android:layout_width="300sp"
        android:layout_height="70sp"
        android:layout_marginTop="40sp"
        android:background="@drawable/my_button"
        android:bufferType="spannable"
        android:filterTouchesWhenObscured="false"
        android:includeFontPadding="false"
        android:outlineProvider="none"
        android:scrollbarStyle="insideInset"
        android:singleLine="false"
        android:soundEffectsEnabled="false"
        android:text="@string/mix"
        android:textColor="#FAF9F9"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playOutMorse"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textChoice"
        android:layout_width="300sp"
        android:layout_height="92sp"
        android:layout_marginTop="56sp"
        android:fontFamily="casual"
        android:text="@string/choice_gm"
        android:textAlignment="center"
        android:textColor="#FF00BF"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginBottom="16sp"
        android:background="@drawable/my_button"
        android:text="@string/back"
        android:textColor="#FAF9F9"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>