<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
    </ImageView>

    <TextView
        android:id="@+id/gameMode"
        android:layout_width="124sp"
        android:layout_height="22sp"
        android:fontFamily="cursive"
        android:text="@string/game_mode"
        android:textAlignment="center"
        android:textColor="#000788"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/gm"
        android:layout_width="409sp"
        android:layout_height="56sp"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:textColor="#000788"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameMode"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginBottom="16sp"
        android:background="@drawable/my_button"
        android:text="@string/back"
        android:textColor="#FAF9F9"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/quest_word"
        android:layout_width="390sp"
        android:layout_height="146sp"
        android:layout_marginTop="36sp"
        android:background="@drawable/word_place"
        android:clickable="false"
        android:textAlignment="center"
        android:textColor="#FAF9F9"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gm" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/answer_word"
        android:layout_width="386sp"
        android:layout_height="86sp"
        android:layout_marginTop="48sp"
        android:background="@drawable/answer_place"
        android:clickable="false"
        android:text=""
        android:textAlignment="center"
        android:textColor="#FAF9F9"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quest_word" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/check_button"
        android:layout_width="362sp"
        android:layout_height="85sp"
        android:layout_marginBottom="116sp"
        android:background="@drawable/button_check"
        android:text="@string/check"
        android:textAlignment="center"
        android:textColor="#FAF9F9"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/status"
        android:layout_width="366sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32sp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/check_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>